--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!-- Production <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
 
-    <title>Template Project </title>
+    <title>Youth Activists </title>
   </head>
   <body>
     <h1>Hello, world!</h1>
