--- a/index.html
+++ b/index.html
@@ -11,8 +11,38 @@
     <title>Youth Activists </title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
 
+      <div class="row text-center">
+    <h1>Do Something!</h1>
+      </div>
+
+      <div class="row">
+        <div class="col-3">
+          <img src="images/Celeste-Aguilar.jpg" />
+        </div>
+
+        <div class="col-3">
+          <img src="images/Celeste-Aguilar.jpg" />
+        </div>
+
+        <div class="col-3">
+          <img src="images/Celeste-Aguilar.jpg" />
+        </div>
+
+        <div class="col-3">
+          <img src="images/Celeste-Aguilar.jpg" />
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
