Changed format of photos

--- a/index.html
+++ b/index.html
@@ -14,26 +14,67 @@
     <div class="container-fluid">
 
       <div class="row text-center">
-    <h1>Do Something!</h1>
+        <div class="col-3">
+          <img class="img-fluid" src="images/footer-logo.png" alt="yr-logo" width="100" height="500"/>
+        </div>
+
+        <div class="col-6">
+            <h1>Do Something!</h1>
+        </div>
+        <div class="col-3">
+            <img class="img-fluid" src="images/socialmediabanner.jpg" alt="socialmediabanner" width="100" height="500"/>
+        </div>
       </div>
 
       <div class="row">
         <div class="col-3">
-          <img src="images/Celeste-Aguilar.jpg" />
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar" />
+          <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
         </div>
 
         <div class="col-3">
-          <img src="images/Celeste-Aguilar.jpg" />
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
+            <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
         </div>
 
         <div class="col-3">
-          <img src="images/Celeste-Aguilar.jpg" />
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar" />
+            <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
         </div>
 
         <div class="col-3">
-          <img src="images/Celeste-Aguilar.jpg" />
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
+            <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
         </div>
       </div>
+
+    <br>
+
+      <div class="row">
+        <div class="col-3">
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
+            <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
+        </div>
+
+        <div class="col-3">
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
+            <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
+        </div>
+
+        <div class="col-3">
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
+            <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
+        </div>
+
+        <div class="col-3">
+          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
+            <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
+        </div>
+
+
+
+      </div>
+
 
 
 
