--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!-- Production <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
 
@@ -13,36 +14,36 @@
   <body>
     <div class="container-fluid">
 
-      <div class="row text-center">
-        <div class="col-3">
+      <div class="row text-center header">
+        <div class="col-12 col-sm-3">
           <img class="img-fluid" src="images/footer-logo.png" alt="yr-logo" width="100" height="500"/>
         </div>
 
-        <div class="col-6">
+        <div class=" col-12 col-sm-6">
             <h1>Do Something!</h1>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-3">
             <img class="img-fluid " src="images/socialmediabanner.jpg" alt="socialmediabanner" width="100" height="500"/>
         </div>
       </div>
-
+<br />
       <div class="row">
-        <div class="col-3">
+        <div class="col-12 col-sm-3">
           <img class="img-fluid format" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar" />
           <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
         </div>
 
-        <div class="col-3">
+        <div class=" col-12 col-sm-3">
           <img class="img-fluid format" src="images/Hamdia-Ahmed.jpg" alt="Hamdia-Ahmed"/>
             <h4 class="text-center">Hamdia Ahmed, 20, Portland, Maine, University of Southern Maine</h4>
         </div>
 
-        <div class="col-3">
+        <div class="col-12 col-sm-3">
           <img class="img-fluid format" src="images/Anya-Andrews.jpg" alt="Anya-Andrews" />
             <h4 class="text-center">Anya Andrews, 18, Policy Committee Leader, Los Angeles, CA</h4>
         </div>
 
-        <div class="col-3">
+        <div class="col-12 col-sm-3">
           <img class="img-fluid format" src="images/Santos-Amaya-Guevara.jpg" alt="Santos-Amaya-Guevara"/>
             <h4 class="text-center">Santos Amaya Guevara, 20, Washington, D.C., co-founder, Latin American Youth Center’s Latino Youth Leadership Council</h4>
         </div>
@@ -51,22 +52,22 @@
     <br>
 
       <div class="row">
-        <div class="col-3">
+        <div class="col-12 col-sm-3">
           <img class="img-fluid format" src="images/Seun-Babaloa.jpg" alt="Seun-Babaloa"/>
             <h4 class="text-center">Seun Babalola, 20, Bronx, N.Y., Penn State</h4>
         </div>
 
-        <div class="col-3">
+        <div class="col-12 col-sm-3">
           <img class="img-fluid format" src="images/Ziad-Ahmed.jpg" alt="Celeste-Aguilar"/>
             <h4 class="text-center">Ziad Ahmed, 19, Princeton, NJ, Yale University </h4>
         </div>
 
-        <div class="col-3 format">
+        <div class="col-12 col-sm-3 format">
           <img class="img-fluid" src="images/Grace-Dolan-Sandrino.jpg" alt="Grace-Dolan-Sandrino"/>
             <h4 class="text-center">Grace Dolan-Sandrino, 17, Washington DC </h4>
         </div>
 
-        <div class="col-3 format">
+        <div class="col-12 col-sm-3 format">
           <img class="img-fluid" src="images/Katie-Eder.jpg" alt="Katie-Eder"/>
             <h4 class="text-center">Katie Eder, 18, Shorewood, WI, founder, 50 Miles More</h4>
 
@@ -75,23 +76,34 @@
 
 
       </div>
-<br />
+        <br />
       <div class="row">
-        <div class="col-5">
+        <div class="col-12 col-sm-5">
           <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
         </div>
-        <div class="col-7">
-          <h1 class="text-center"> Celeste Aguilar</h1>
+        <div class="col-12 col-sm-7">
+          <h1 class="text-center name"> Celeste Aguilar <span> <img src="images/dc.png" height="60px" /> </span></h1>
           <p class="text-center">
             As a young Latina student, I’m fighting for justice in my society, like equality and safety for all individuals — no matter their immigration status, sex or race. I stand and I speak up for others and I attend marches and protests for rights and participate in any kind of protest that will benefit us, young and old, because it will make a change but we have to work together for change. I do this because I strongly believe that the more people who seek change, the quicker the change will comeI’m only one, but when it comes to numbers, we can all work to make a difference. I matter, and my voice matters. MLK voiced his concerns, and we should join him in this effort.It’s pivotal for all living in the U.S. to stand for social justice issues because without it there wouldn’t be any order. We need a change for future generations to have good morals, positive mindset and to live at peace.
           </p>
+
         </div>
       </div>
 
 
+<br />
 
+      <div class="row header">
+        <div class="col-4">
 
+        </div>
+        <div class="col-4 text-center">
+          <h2> Share Button</h2>
+          <div class="col-4">
 
+          </div>
+        </div>
+      </div>
 
 
 
