--- a/index.html
+++ b/index.html
@@ -27,67 +27,100 @@
         </div>
       </div>
 <br />
+    <div id="grid">
+
+
       <div class="row">
-        <div class="col-12 col-sm-3">
-          <img class="img-fluid format" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar" />
-          <h4 class="text-center">Celeste Aguilar, 16, Washington, D.C.</h4>
+        <div class="col-12 col-sm-3" id="person-1">
+
         </div>
 
-        <div class=" col-12 col-sm-3">
-          <img class="img-fluid format" src="images/Hamdia-Ahmed.jpg" alt="Hamdia-Ahmed"/>
-            <h4 class="text-center">Hamdia Ahmed, 20, Portland, Maine, University of Southern Maine</h4>
+        <div class=" col-12 col-sm-3" id="person-2">
+
         </div>
 
-        <div class="col-12 col-sm-3">
-          <img class="img-fluid format" src="images/Anya-Andrews.jpg" alt="Anya-Andrews" />
-            <h4 class="text-center">Anya Andrews, 18, Policy Committee Leader, Los Angeles, CA</h4>
+        <div class="col-12 col-sm-3" id="person-3">
+
         </div>
 
-        <div class="col-12 col-sm-3">
-          <img class="img-fluid format" src="images/Santos-Amaya-Guevara.jpg" alt="Santos-Amaya-Guevara"/>
-            <h4 class="text-center">Santos Amaya Guevara, 20, Washington, D.C., co-founder, Latin American Youth Center’s Latino Youth Leadership Council</h4>
+        <div class="col-12 col-sm-3" id="person-4">
+
         </div>
       </div>
 
     <br>
 
       <div class="row">
-        <div class="col-12 col-sm-3">
-          <img class="img-fluid format" src="images/Seun-Babaloa.jpg" alt="Seun-Babaloa"/>
-            <h4 class="text-center">Seun Babalola, 20, Bronx, N.Y., Penn State</h4>
-        </div>
-
-        <div class="col-12 col-sm-3">
-          <img class="img-fluid format" src="images/Ziad-Ahmed.jpg" alt="Celeste-Aguilar"/>
-            <h4 class="text-center">Ziad Ahmed, 19, Princeton, NJ, Yale University </h4>
-        </div>
-
-        <div class="col-12 col-sm-3 format">
-          <img class="img-fluid" src="images/Grace-Dolan-Sandrino.jpg" alt="Grace-Dolan-Sandrino"/>
-            <h4 class="text-center">Grace Dolan-Sandrino, 17, Washington DC </h4>
-        </div>
-
-        <div class="col-12 col-sm-3 format">
-          <img class="img-fluid" src="images/Katie-Eder.jpg" alt="Katie-Eder"/>
-            <h4 class="text-center">Katie Eder, 18, Shorewood, WI, founder, 50 Miles More</h4>
+        <div class="col-12 col-sm-3" id="person-5">
 
         </div>
 
+        <div class="col-12 col-sm-3" id="person-6">
 
+        </div>
+
+        <div class="col-12 col-sm-3 format" id="person-7">
+        </div>
+
+        <div class="col-12 col-sm-3 format" id="person-8">
+
+        </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-sm-3" id="person-9">
 
       </div>
-        <br />
-      <div class="row">
-        <div class="col-12 col-sm-5">
-          <img class="img-fluid" src="images/Celeste-Aguilar.jpg" alt="Celeste-Aguilar"/>
-        </div>
-        <div class="col-12 col-sm-7">
-          <h1 class="text-center name"> Celeste Aguilar <span> <img src="images/dc.png" height="60px" /> </span></h1>
-          <p class="text-center">
-            As a young Latina student, I’m fighting for justice in my society, like equality and safety for all individuals — no matter their immigration status, sex or race. I stand and I speak up for others and I attend marches and protests for rights and participate in any kind of protest that will benefit us, young and old, because it will make a change but we have to work together for change. I do this because I strongly believe that the more people who seek change, the quicker the change will comeI’m only one, but when it comes to numbers, we can all work to make a difference. I matter, and my voice matters. MLK voiced his concerns, and we should join him in this effort.It’s pivotal for all living in the U.S. to stand for social justice issues because without it there wouldn’t be any order. We need a change for future generations to have good morals, positive mindset and to live at peace.
-          </p>
 
-        </div>
+      <div class="col-12 col-sm-3" id="person-10">
+
+      </div>
+
+      <div class="col-12 col-sm-3 format" id="person-11">
+      </div>
+
+      <div class="col-12 col-sm-3 format" id="person-12">
+
+      </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 col-sm-3" id="person-13">
+
+    </div>
+
+    <div class="col-12 col-sm-3" id="person-14">
+
+    </div>
+
+    <div class="col-12 col-sm-3 format" id="person-15">
+    </div>
+
+    <div class="col-12 col-sm-3 format" id="person-16">
+
+    </div>
+</div>
+
+<div class="row">
+  <div class="col-12 col-sm-3" id="person-17">
+
+  </div>
+
+  <div class="col-12 col-sm-3" id="person-18">
+
+  </div>
+
+  <div class="col-12 col-sm-3 format" id="person-19">
+  </div>
+
+  <div class="col-12 col-sm-3 format" id="person-20">
+
+  </div>
+</div>
+  </div>
+        <br />
+      <div class="row" id="profile">
+
       </div>
 
 
@@ -113,5 +146,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+
   </body>
 </html>
