made the photos better

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class=" col-12 col-sm-6">
-            <h1>Do Something!</h1>
+            <h1 onclick="goBack()">Do Something!</h1>
         </div>
         <div class="col-12 col-sm-3">
             <img class="img-fluid " src="images/socialmediabanner.jpg" alt="socialmediabanner" width="100" height="500"/>
@@ -31,19 +31,19 @@
 
 
       <div class="row">
-        <div class="col-12 col-sm-3" id="person-1">
+        <div class="col-12 col-sm-3 text-center" id="person-1">
 
         </div>
 
-        <div class=" col-12 col-sm-3" id="person-2">
+        <div class=" col-12 col-sm-3 text-center" id="person-2">
 
         </div>
 
-        <div class="col-12 col-sm-3" id="person-3">
+        <div class="col-12 col-sm-3 text-center" id="person-3">
 
         </div>
 
-        <div class="col-12 col-sm-3" id="person-4">
+        <div class="col-12 col-sm-3 text-center" id="person-4">
 
         </div>
       </div>
@@ -51,75 +51,75 @@
     <br>
 
       <div class="row">
-        <div class="col-12 col-sm-3" id="person-5">
+        <div class="col-12 col-sm-3 text-center" id="person-5">
 
         </div>
 
-        <div class="col-12 col-sm-3" id="person-6">
+        <div class="col-12 col-sm-3 text-center" id="person-6">
 
         </div>
 
-        <div class="col-12 col-sm-3 format" id="person-7">
+        <div class="col-12 col-sm-3 format text-center" id="person-7">
         </div>
 
-        <div class="col-12 col-sm-3 format" id="person-8">
+        <div class="col-12 col-sm-3 format text-center" id="person-8">
 
         </div>
     </div>
 
     <div class="row">
-      <div class="col-12 col-sm-3" id="person-9">
+      <div class="col-12 col-sm-3 text-center" id="person-9">
 
       </div>
 
-      <div class="col-12 col-sm-3" id="person-10">
+      <div class="col-12 col-sm-3 text-center" id="person-10">
 
       </div>
 
-      <div class="col-12 col-sm-3 format" id="person-11">
+      <div class="col-12 col-sm-3 format text-center" id="person-11">
       </div>
 
-      <div class="col-12 col-sm-3 format" id="person-12">
+      <div class="col-12 col-sm-3 format text-center" id="person-12">
 
       </div>
   </div>
 
   <div class="row">
-    <div class="col-12 col-sm-3" id="person-13">
+    <div class="col-12 col-sm-3 text-center" id="person-13">
 
     </div>
 
-    <div class="col-12 col-sm-3" id="person-14">
+    <div class="col-12 col-sm-3 text-center" id="person-14">
 
     </div>
 
-    <div class="col-12 col-sm-3 format" id="person-15">
+    <div class="col-12 col-sm-3 format text-center" id="person-15">
     </div>
 
-    <div class="col-12 col-sm-3 format" id="person-16">
+    <div class="col-12 col-sm-3 format text-center" id="person-16">
 
     </div>
 </div>
 
 <div class="row">
-  <div class="col-12 col-sm-3" id="person-17">
+  <div class="col-12 col-sm-3 text-center" id="person-17">
 
   </div>
 
-  <div class="col-12 col-sm-3" id="person-18">
+  <div class="col-12 col-sm-3 text-center" id="person-18">
 
   </div>
 
-  <div class="col-12 col-sm-3 format" id="person-19">
+  <div class="col-12 col-sm-3 format text-center" id="person-19">
   </div>
 
-  <div class="col-12 col-sm-3 format" id="person-20">
+  <div class="col-12 col-sm-3 format text-center" id="person-20">
 
   </div>
 </div>
   </div>
         <br />
-      <div class="row" id="profile">
+      <div class="row text-center" id="profile">
 
       </div>
 
