--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid">
 
-      <div class="row text-center header">
+      <div class="row text-center header my-auto">
         <div class="col-12 col-sm-3">
           <img class="img-fluid" src="images/footer-logo.png" alt="yr-logo" width="100" height="500"/>
         </div>
