added twitter photo

--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
 
       <div class="row text-center header my-auto">
         <div class="col-12 col-sm-3">
-          <img class="img-fluid" src="images/footer-logo.png" alt="yr-logo" width="100" height="500"/>
+          <a href="http://youthradio.org/">
+            <img class="img-fluid" src="images/footer-logo.png" alt="yr-logo" width="100" height="500"/>
+          </a>
         </div>
 
         <div class=" col-12 col-sm-6">
             <h1 onclick="goBack()">Do Something!</h1>
         </div>
-        <div class="col-12 col-sm-3">
-            <img class="img-fluid " src="images/socialmediabanner.jpg" alt="socialmediabanner" width="100" height="500"/>
+        <div class="col-12 col-sm-1">
+            <img class="img-fluid " src="youthpics/twitter.png" alt="socialmediabanner" width="150" height="500"/>
+        </div>
+        <div class="col-12 col-sm-1">
+            <img class="img-fluid " src="youthpics/facebook.png" alt="socialmediabanner" width="50" height="250"/>
         </div>
       </div>
 <br />
@@ -130,12 +135,7 @@
         <div class="col-4">
 
         </div>
-        <div class="col-4 text-center">
-          <h2> Share Button</h2>
-          <div class="col-4">
 
-          </div>
-        </div>
       </div>
 
 
