added like and dislike

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
             <h1 onclick="goBack()">Do Something!</h1>
         </div>
         <div class="col-12 col-sm-1">
+            <a href="https://twitter.com/youthradio?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
             <img class="img-fluid " src="youthpics/twitter.png" alt="socialmediabanner" width="150" height="500"/>
+          </a>
         </div>
         <div class="col-12 col-sm-1">
-            <img class="img-fluid " src="youthpics/facebook.png" alt="socialmediabanner" width="50" height="250"/>
+            <a href="https://www.facebook.com/youthradiopage/">
+            <img class="img-fluid fblogo" src="youthpics/facebook.png" alt="socialmediabanner" width="50" height="250"/>
+          </a>
         </div>
       </div>
 <br />
@@ -129,14 +133,7 @@
       </div>
 
 
-<br />
 
-      <div class="row header">
-        <div class="col-4">
-
-        </div>
-
-      </div>
 
 
 
